Se actualiza MesaService para soportar nuevos campos